// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YesNoQuestionSchema addFollowupStream TODO: only supports \`yes\` right now: with yes 1`] = `
"[
  {
    \\"code\\": \\"unrecognized_keys\\",
    \\"keys\\": [
      \\"no\\"
    ],
    \\"path\\": [
      \\"addFollowupStream\\"
    ],
    \\"message\\": \\"Unrecognized key(s) in object: 'no'\\"
  }
]"
`;

exports[`YesNoQuestionSchema addFollowupStream TODO: only supports \`yes\` right now: without yes 1`] = `
"[
  {
    \\"code\\": \\"unrecognized_keys\\",
    \\"keys\\": [
      \\"no\\"
    ],
    \\"path\\": [
      \\"addFollowupStream\\"
    ],
    \\"message\\": \\"Unrecognized key(s) in object: 'no'\\"
  }
]"
`;

exports[`YesNoQuestionSchema addFollowupStream should not be null 1`] = `
"[
  {
    \\"code\\": \\"invalid_type\\",
    \\"expected\\": \\"object\\",
    \\"received\\": \\"null\\",
    \\"path\\": [
      \\"addFollowupStream\\"
    ],
    \\"message\\": \\"Expected object, received null\\"
  }
]"
`;

exports[`YesNoQuestionSchema addFollowupStream should not contain keys other than yes: with yes 1`] = `
"[
  {
    \\"code\\": \\"unrecognized_keys\\",
    \\"keys\\": [
      \\"other_key\\"
    ],
    \\"path\\": [
      \\"addFollowupStream\\"
    ],
    \\"message\\": \\"Unrecognized key(s) in object: 'other_key'\\"
  }
]"
`;

exports[`YesNoQuestionSchema addFollowupStream should not contain keys other than yes: without yes 1`] = `
"[
  {
    \\"code\\": \\"unrecognized_keys\\",
    \\"keys\\": [
      \\"other_key\\"
    ],
    \\"path\\": [
      \\"addFollowupStream\\"
    ],
    \\"message\\": \\"Unrecognized key(s) in object: 'other_key'\\"
  }
]"
`;

exports[`YesNoQuestionSchema addFollowupStream stream name should not be null 1`] = `
"[
  {
    \\"code\\": \\"invalid_type\\",
    \\"expected\\": \\"string\\",
    \\"received\\": \\"null\\",
    \\"path\\": [
      \\"addFollowupStream\\",
      \\"yes\\"
    ],
    \\"message\\": \\"Expected string, received null\\"
  }
]"
`;

exports[`YesNoQuestionSchema branchStartId should not be null 1`] = `
"[
  {
    \\"code\\": \\"invalid_type\\",
    \\"expected\\": \\"object\\",
    \\"received\\": \\"null\\",
    \\"path\\": [
      \\"branchStartId\\"
    ],
    \\"message\\": \\"Expected object, received null\\"
  }
]"
`;

exports[`YesNoQuestionSchema branchStartId should not contain keys beside yes and no: with yes & no 1`] = `
"[
  {
    \\"code\\": \\"unrecognized_keys\\",
    \\"keys\\": [
      \\"other\\"
    ],
    \\"path\\": [
      \\"branchStartId\\"
    ],
    \\"message\\": \\"Unrecognized key(s) in object: 'other'\\"
  }
]"
`;

exports[`YesNoQuestionSchema branchStartId should not contain keys beside yes and no: without yes / no 1`] = `
"[
  {
    \\"code\\": \\"unrecognized_keys\\",
    \\"keys\\": [
      \\"other\\"
    ],
    \\"path\\": [
      \\"branchStartId\\"
    ],
    \\"message\\": \\"Unrecognized key(s) in object: 'other'\\"
  }
]"
`;

exports[`YesNoQuestionSchema type 1`] = `
"[
  {
    \\"code\\": \\"invalid_type\\",
    \\"expected\\": \\"YesNo\\",
    \\"received\\": \\"HowLongAgo\\",
    \\"path\\": [
      \\"type\\"
    ],
    \\"message\\": \\"Expected YesNo, received HowLongAgo\\"
  }
]"
`;
